tests/snapshots/test_scan__scan_deprecated_rfc_reference.snap
---
source: tests/test_scan.rs
expression: value
---
$ govctl check
Checked:
  1 RFCs
  0 clauses
  0 ADRs
  0 work items
  0 verification guards
  0 conformance cases
  1 source files scanned
  1 references found

warning[W0107]: Outdated reference: RFC-0001 (deprecated) (hint: update comment or remove [[...]]) (src/main.rs)
exit: 0
