tests/snapshots/test_scan__scan_mixed_valid_invalid_references.snap
---
source: tests/test_scan.rs
expression: value
---
$ govctl check
Checked:
  1 RFCs
  0 clauses
  0 ADRs
  0 work items
  0 verification guards
  0 conformance cases
  1 source files scanned
  2 references found

error[E0107]: Unknown artifact reference: RFC-9999 (src/main.rs:1:34)
exit: 1
