tests/snapshots/test_scan__scan_multiple_references_in_file.snap
---
source: tests/test_scan.rs
expression: value
---
$ govctl check
Checked:
  2 RFCs
  0 clauses
  0 ADRs
  0 work items
  0 verification guards
  0 conformance cases
  1 source files scanned
  2 references found

✓ All checks passed
exit: 0
