tests/snapshots/test_scan__scan_no_references.snap
---
source: tests/test_scan.rs
expression: value
---
$ govctl check
Checked:
  0 RFCs
  0 clauses
  0 ADRs
  0 work items
  0 verification guards
  0 conformance cases
  0 source files scanned
  0 references found

✓ All checks passed
exit: 0
