tests/snapshots/test_scan__scan_unknown_clause_reference.snap
---
source: tests/test_scan.rs
expression: value
---
$ govctl check
Checked:
  1 RFCs
  0 clauses
  0 ADRs
  0 work items
  0 verification guards
  0 conformance cases
  1 source files scanned
  1 references found

error[E0107]: Unknown artifact reference: RFC-0001:C-NONEXISTENT (src/main.rs:1:17)
exit: 1
