tests/snapshots/test_scan__scan_unknown_rfc_reference.snap
---
source: tests/test_scan.rs
expression: value
---
$ govctl check
Checked:
  0 RFCs
  0 clauses
  0 ADRs
  0 work items
  0 verification guards
  0 conformance cases
  1 source files scanned
  1 references found

error[E0107]: Unknown artifact reference: RFC-9999 (src/main.rs)
exit: 1
