tests/snapshots/test_scan__scan_valid_adr_reference.snap
---
source: tests/test_scan.rs
expression: value
---
$ govctl check
Checked:
  0 RFCs
  0 clauses
  1 ADRs
  0 work items
  0 verification guards
  1 source files scanned
  1 references found

warning[W0103]: ADR has no artifact references (hint: `govctl adr edit ADR-0001 refs --add RFC-XXXX`) (gov/adr/ADR-XXXX-test-decision.toml)
warning[W0113]: ADR has placeholder context (hint: `govctl adr edit ADR-0001 context --set "..."`) (gov/adr/ADR-XXXX-test-decision.toml)
exit: 0
