tests/snapshots/test_scan__scan_valid_work_item_reference.snap
---
source: tests/test_scan.rs
expression: value
---
$ govctl check
Checked:
  0 RFCs
  0 clauses
  0 ADRs
  1 work items
  0 verification guards
  1 source files scanned
  1 references found

warning[W0108]: Work item has placeholder description (hint: `govctl work edit WI-<DATE>-001 description --set "..."`) (gov/work/<DATE>-test-task.toml)
exit: 0
